--- a/src/components/customChart/CustomChart.css
+++ b/src/components/customChart/CustomChart.css
@@ -1,4 +1,7 @@
 .custom-chart-container {
+  margin: 50px 0 0 0;
+  
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
 .custom-chart-container .chart-request-container {
