--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -10,6 +10,8 @@
 .dashboard-container .dashboard-user-welcome {
   width: 30vw;
   margin: 0 0 50px 0;
+
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
 .dashboard-container .dashboard-user-welcome .loading {
@@ -35,6 +37,8 @@
 .dashboard-container .dashboard-card {
   width: 25vw;
   background-color: #ffffff;
+
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
 .dashboard-container .dashboard-card .dashboard-card-header {
@@ -73,13 +77,12 @@
 }
 
 /*Chart container*/
-.dashboard-container .dashboard-chart-container {
-  margin: 50px 0 0 0;
-}
 
 /*Schedule container*/
 .dashboard-container .dashboard-schedule-container {
   margin: 50px 0 0 0;
+
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
 .dashboard-container .dashboard-schedule-container .box-container {
