--- a/src/components/manageStaff/ManageStaff.css
+++ b/src/components/manageStaff/ManageStaff.css
@@ -1,15 +1,26 @@
 .manage-staff-container {
-  margin: 10px 0 0 0;
+  margin: 5px 0 0 0;
+}
+
+.manage-staff-container .filter-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
 }
 
 .manage-staff-container .button-container {
-  width: 100%;
   display: flex;
   flex-direction: row-reverse;
-  padding: 0px 0px 10px 0px;
+}
+
+.manage-staff-container .content-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
+}
+
+.manage-staff-container .content-container .pagination {
+  margin-bottom: 0;
 }
 
 .manage-staff-container .table-container {
+  height: 70vh;
 }
 
 .manage-staff-container .table-container thead {
