--- a/src/components/staffDetail/StaffDetail.css
+++ b/src/components/staffDetail/StaffDetail.css
@@ -2,6 +2,58 @@
   margin: 10px 0 0 0;
 }
 
+.staff-detail-container .staff-info-container {
+  height: 15vh;
+  box-shadow: 0px 3px 8px #a6a6a6;
+}
+
+.staff-detail-container .staff-info-container .loading {
+  height: 100%;
+  padding: 0;
+}
+
+.staff-detail-container .staff-info-container .loading .loading-text {
+  font-size: 30px;
+}
+
+.staff-detail-container .table-filter-container {
+  /* box-shadow: 0px 3px 8px #a6a6a6; */
+}
+
+.staff-detail-container .table-filter-container .box-container {
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.staff-detail-container .table-filter-container .box {
+  width: 50px;
+  height: 100%;
+  border: 1px solid #000000;
+  margin: 0 10px 0 0;
+}
+
+.staff-detail-container .table-filter-container .box-checked {
+  background-color: #00b300;
+}
+
+.staff-detail-container .card-table-container {
+  box-shadow: 0px 3px 8px #a6a6a6;
+}
+
+.staff-detail-container .card-table-container .table-container {
+  max-height: 420px;
+  overflow-y: scroll;
+}
+
+.staff-detail-container .card-table-container .table-container .loading {
+  height: 100%;
+}
+
+.staff-detail-container .table-container .td-checked {
+  background-color: #00b300;
+}
+
 .staff-detail-container .table-container .table {
   margin: 0;
 }
@@ -15,7 +67,7 @@
 }
 
 .staff-detail-container .table-container .date-th {
-  width: 11;
+  width: 11%;
 }
 
 .staff-detail-container .table-container .slot-th {
